--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
       "last 1 safari version"
     ]
   },
+  "peerDependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
   "devDependencies": {
     "@storybook/addon-actions": "^5.2.8",
     "@storybook/addon-links": "^5.2.8",
